Incorporate tmux settings I've been using

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,61 +1,114 @@
-
-# TODO: check for 256 colors
 # set TERM to a valid 256-color terminal
 set -g default-terminal "screen-256color"
-set -g terminal-overrides "xterm:colors=256:\
-setaf=\e[%?%p1%{8}%<%t3%p1%d%e%p1%{16}%<%t9%p1%{8}%-%d%e38;5;%p1%d%;m:\
-setab=\e[%?%p1%{8}%<%t4%p1%d%e%p1%{16}%<%t10%p1%{8}%-%d%e48;5;%p1%d%;m"
 
-# use C-x instead of C-b for prefix (closer to the fingers)
-set -g prefix C-x
+# use M-x instead of C-b for prefix
+# (easier to type, doesn't interfere with mapping in Vim etc.)
+# NOTE: fix iTerm2 config to send ESC+ on pressing "option" key
+set -g prefix M-x
 bind x send-prefix
 unbind C-b
 
 # use prefix twice to switch to last window
-bind C-x last
+bind M-x last
 
 # space/backspace (like screen) is useful too
 bind space next
-bind C-space next
+#bind M-space next
+#bind -n M-space next
 bind bspace prev
-# chrome ssh sends C-h for Ctrl-Backspace
-bind C-h prev
+#bind M-bspace prev
+#bind -n M-bspace prev
 
-# allow both c and C-c for new window
-bind C-c new-window
-
-# quick switch using F-keys
-#bind -n F10 choose-window
-bind -n F11 prev
-bind -n F12 next
+# allow both c and M-c for new window
+bind M-c new-window
 
 # start windows at 1
 set -g base-index 1
+set -gw pane-base-index 1
 
-# F-keys to select windows 1-8
-bind -n F1 select-window -t 1
-bind -n F2 select-window -t 2
-bind -n F3 select-window -t 3
-bind -n F4 select-window -t 4
-bind -n F5 select-window -t 5
-bind -n F6 select-window -t 6
-bind -n F7 select-window -t 7
-bind -n F8 select-window -t 8
+# M-number keys to select windows 1-9
+bind 1 select-window -t 1
+bind M-1 select-window -t 1
+bind -n M-1 select-window -t 1
+bind 2 select-window -t 2
+bind M-2 select-window -t 2
+bind -n M-2 select-window -t 2
+bind 3 select-window -t 3
+bind M-3 select-window -t 3
+bind -n M-3 select-window -t 3
+bind 4 select-window -t 4
+bind M-4 select-window -t 4
+bind -n M-4 select-window -t 4
+bind 5 select-window -t 5
+bind M-5 select-window -t 5
+bind -n M-5 select-window -t 5
+bind 6 select-window -t 6
+bind M-6 select-window -t 6
+bind -n M-6 select-window -t 6
+bind 7 select-window -t 7
+bind M-7 select-window -t 7
+bind -n M-7 select-window -t 7
+bind 8 select-window -t 8
+bind M-8 select-window -t 8
+bind -n M-8 select-window -t 8
+bind 9 select-window -t 9
+bind M-9 select-window -t 9
+bind -n M-9 select-window -t 9
+
+# M-[ to enter copy mode, also M-Q
+# Shortcut M-] to paste buffer
+bind M-[ copy-mode
+bind -n M-[ copy-mode
+bind -n M-q copy-mode
+bind -n M-] paste-buffer
 
 # set vi mode for editor
 set -gw mode-keys vi
 set -g status-keys vi
 
-# short timeout for ESC -> otherwise it's hard to use nvim
+# short timeout for ESC: nvim needs this
 set -sg escape-time 10
 
 # increase history-limit to 10,000 lines
 set -g history-limit 10000
 
-# don't rename windows
-set -gw allow-rename off
-set -gw automatic-rename off
-
-# TODO: set environment for SSH
-#set -g update-environment ""
-#set-environment -g SSH_AUTH_SOCK /tmp/agent.filbranden.localssh
+# color scheme (styled as vim-powerline)
+#set -g status-left-length 52
+#set -g status-right-length 451
+# %{lightline#link()}%#LightlineLeft_active_0#%( %{lightline#mode()}
+# %)%{(&paste)?"|":""}%( %{&paste?"PASTE":""}
+# %)%#LightlineLeft_active_0_1#%#LightlineLeft_active_1#%( %R
+# %)%{(&readonly)&&(1||(&modified||!&modifiable))?"|":""}%( %t
+# %)%{(&modified||!&modifiable)?"|":""}%( %M
+# %)%#LightlineLeft_active_1_2#%#LightlineMiddle_active#%=%#LightlineRight_active_2_3#%#LightlineRight_active_2#%(
+# %{&ff} %)%{1||1?"|":""}%( %{&fenc!=#""?&fenc:&enc} %)%{1?"|":""}%(
+# %{&ft!=#""?&ft:"no ft"}
+# %)%#LightlineRight_active_1_2#%#LightlineRight_active_1#%( %3p%%
+# %)%#LightlineRight_active_0_1#%#LightlineRight_active_0#%( %3l:%-2v %)
+#
+# Normal:
+# {'right': [['#606060', '#d0d0d0', 241, 252], ['#bcbcbc', '#585858', 250, 240],
+# ['#9e9e9e', '#303030', 247, 236]], 'middle': [['#8a8a8a', '#303030', 245,
+# 236]], 'warning': [['#262626', '#b58900', 235, 136]], 'left': [['#005f00',
+# '#afdf00', 22, 148, 'bold'], ['#ffffff', '#585858', 231, 240]], 'error':
+# [['#bcbcbc', '#ff0000', 250, 196]]}
+#
+# Inactive:
+# {'right': [['#262626', '#606060', 235, 241], ['#585858', '#262626', 240, 235],
+# ['#585858', '#121212', 240, 233]], 'left': [['#585858', '#262626', 240, 235],
+# ['#585858', '#121212', 240, 233]]}
+#
+#set -g pane-border-fg colour245
+#set -g pane-active-border-fg colour39
+#set -g message-fg colour16
+#set -g message-bg colour221
+#set -g message-attr bold
+set -g status-left-length 30
+set -g status-right-length 30
+set -g status-fg colour240
+set -g status-bg colour236
+set -g status-left '#[fg=colour22,bg=colour148,bold] [#S] #(hostname -s)#(. /etc/os-release && echo " (${ID}${VERSION_ID})") #[fg=colour240,bg=colour236,nobold] '
+set -g status-right '#[fg=colour241,bg=colour252] %Y-%m-%d %H:%M:%S '
+set -g window-status-format '#[fg=colour240,bg=colour235] #I #("$HOME/.local/bin/shorten-path" "#{pane_current_path}") #W '
+set -g window-status-current-format '#[fg=colour231,bg=colour240,noreverse] #I #("$HOME/.local/bin/shorten-path" "#{pane_current_path}") #W '
+set -g status-interval 1
